--- a/frontend/src/components/tree/Tree.css
+++ b/frontend/src/components/tree/Tree.css
@@ -18,4 +18,5 @@
 .Tree__Node--selected {
     background-color: var(--subscriptions-tree-node-hover-background-color);
     color: var(--subscriptions-tree-node-selected-text-color);
+    font-weight: bold;
 }
