--- a/frontend/src/components/form/Form.css
+++ b/frontend/src/components/form/Form.css
@@ -1,16 +1,23 @@
-.Form {}
+.Form {
+    width: 100%;
+    height: 100%;
+}
 
 
 .Form__Input {
+    width: 100%;
+
+    margin: 0.5rem 0;
+    padding: 0.5rem 1rem 0.5rem 1rem;
     border: none;
 
     background-color: var(--form-input-background-color);
 
+    color: var(--form-input-text-color);
+
     outline-color: var(--form-input-outline-color);
     outline-style: solid;
     outline-width: var(--form-input-outline-size);
-
-    color: var(--form-input-text-color);
 }
 
 
@@ -25,13 +32,23 @@
 
 
 .Form__Submit {
+    width: 100%;
+
+    margin: 0.5rem 0;
+    padding: 0.5rem 1rem 0.5rem 1rem;
     border: none;
+
     background-color: var(--form-submit-background-color);
     color: var(--form-submit-text-color);
 }
 
 
+.Form__Submit:hover {
+    background-color: var(--form-submit-hover-background-color);
+}
+
+
 .Form__Submit:focus {
-    outline: none;
     background-color: var(--form-submit-focus-background-color);
+    outline: none;
 }
