--- a/frontend/src/style/default.css
+++ b/frontend/src/style/default.css
@@ -12,3 +12,8 @@ html {
     -moz-box-sizing: inherit;
 }
 
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+                 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+                 sans-serif;
+}
