--- a/frontend/src/components/feed-item-viewer/FeedItemViewer.css
+++ b/frontend/src/components/feed-item-viewer/FeedItemViewer.css
@@ -1,1 +1,11 @@
-.FeedItemViewer {}
+.FeedItemViewer {
+    width: 100%;
+    height: 100%;
+
+    padding: 1.5rem;
+
+    background-color: var(--feeditemviewer-background-color);
+    color: var(--feeditemviewer-text-color);
+
+    font-size: 14pt;
+}
