--- a/frontend/src/components/subscriptions-browser/SubscriptionsBrowser.css
+++ b/frontend/src/components/subscriptions-browser/SubscriptionsBrowser.css
@@ -14,6 +14,7 @@
     grid-area: tree;
     padding: 1rem;
     background-color: var(--subscriptions-tree-background-color);
+    overflow-y: auto;
 }
 
 .SubscriptionsBrowser__Toolbar {
